# my_clib

./: .gitignore  CMakeLists.txt  README.txt  compile.sh  debug.sh  img3.c  io_utils.c  io_utils.h  look_for_tags.sh  main.c  readAndPrintTextFile.c  string_utils.c  string_utils.h
.github/workflows/: codeql.yml
include/: img3.h  io_utils.h  string_utils.h
src/: img3.c  io_utils.c  main.c  string_utils.c
